--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>JS calculator</title>
+<title>JSohn david calculator</title>
     <style type="text/css" media="all">
 body{
     background-image: url("img/imgres.png");
